--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
+    compile "com.android.support:support-annotations:$support_version"
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile 'com.roughike:bottom-bar:2.0.2'
 }
