--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.support_version = '24.2.0'
     ext.kotlin_version = '1.0.3'
     ext.anko_version = '0.9'
+    ext.realm_version = '1.2.0'
 
     repositories {
         jcenter()
@@ -11,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:$realm_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
