--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "com.android.support:support-annotations:$support_version"
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
