--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,26 +23,30 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "com.android.support:support-annotations:$support_version"
-    compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    compile 'com.roughike:bottom-bar:2.0.2'
-    compile 'com.bluelinelabs:conductor:2.0.1'
 
     kapt "io.realm:realm-annotations:$realm_version"
     kapt "io.realm:realm-annotations-processor:$realm_version"
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:customtabs:24.2.1'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'com.bluelinelabs:conductor:2.0.1'
+    compile 'com.google.firebase:firebase-database:9.8.0'
+    testCompile 'junit:junit:4.12'
 }
 
 kapt {
     generateStubs = true
 }
+
+apply plugin: 'com.google.gms.google-services'
