--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.github.bradypierce.sherwoodhighschool"
@@ -34,8 +34,8 @@ dependencies {
     kapt "io.realm:realm-annotations:$realm_version"
     kapt "io.realm:realm-annotations-processor:$realm_version"
     compile 'com.google.android.gms:play-services:9.8.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    compile 'com.android.support:customtabs:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile "com.android.support:customtabs:$support_version"
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
