--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Schedules.Detail.ScheduleDetailController"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
