Massively refractored app to clean up imports, use official bottom navigtion bar lib. Used kotlin synthetic extensions instead of binding views. removed conductor in favor for traditional fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Schedules.Detail.ScheduleDetailController"
+            android:name=".Schedules.Detail.ScheduleDetailActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
