--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
@@ -11,12 +12,16 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
 }
 
@@ -25,16 +30,12 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "com.android.support:support-annotations:$support_version"
-
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile "com.android.support:customtabs:$support_version"
-    compile 'com.roughike:bottom-bar:2.0.2'
-    compile 'com.bluelinelabs:conductor:2.0.1'
     compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
 }
 
